# estimator-ros

./: .gitignore  .gitmodules  LICENSE  README.md  TODO.md  recordings.db  run_server.sh  source.sh
conda/: environment.yml
config/: calibration.yml  est_params.yml  imu_params.yml
data/imu_calibration/magsweep/: magsweep_0.db3  metadata.yaml
data/imu_calibration/neuro_labra/: metadata.yaml  neuro_labra_0.db3
data/imu_calibration/neuro_labra_lattia_nelio/: metadata.yaml  neuro_labra_lattia_nelio_0.db3
data/imu_calibration/neuro_labra_lattia_nelio_ilmassa/: metadata.yaml
data/imu_calibration/neuro_labra_lattia_pyorii/: metadata.yaml  neuro_labra_lattia_pyorii_0.db3
data/imu_calibration/neuro_labra_lattia_taakse/: metadata.yaml
data/imu_calibration/neuro_labra_magsweep/: metadata.yaml
data/imu_calibration/neuro_labra_oikea/: metadata.yaml
data/imu_calibration/neuro_labra_taakse/: metadata.yaml
data/imu_calibration/neuro_labra_yawdrift_90_inkrementoinnit/: metadata.yaml
data/imu_calibration/neuro_labra_yawdrift_takaisin_sama_asento/: metadata.yaml
data/imu_calibration/uuni_auki_eteen/: metadata.yaml
data/imu_calibration/uuni_auki_oikea/: metadata.yaml
data/imu_calibration/uuni_kiinni_eteen/: metadata.yaml
data/imu_calibration/uuni_kiinni_oikea/: metadata.yaml
data/reference_trajectories/: hissi_1_3.csv  hissi_2_3.csv  hissi_3_2.csv  tuas_aula_kaide.csv  tuas_oikea_vasen.csv  tuas_vasen_oikea.csv
data/rosbags/testi_huone_1594/: metadata.yaml  testi_huone_1594_0.db3
data/rosbags/tuas_aula_oikea_vasen/: metadata.yaml  tuas_aula_oikea_vasen_0.db3
data/rosbags/tuas_aula_v1/: metadata.yaml  tuas_aula_v1_0.db3
data/rosbags/tuas_aula_v2/: metadata.yaml
data/rosbags/tuas_aula_vasen_oikea/: metadata.yaml  tuas_aula_vasen_oikea_0.db3
data/rosbags/tuas_hissi_2_3/: metadata.yaml  tuas_hissi_2_3_0.db3
data/rosbags/tuas_hissi_3_1/: metadata.yaml  tuas_hissi_3_1_0.db3
data/rosbags/tuas_hissi_3_2/: metadata.yaml  tuas_hissi_3_2_0.db3
doc/: CALIBRATION.md  DEV.md  SETUP-ETHERNET.md  SETUP-RPi4.md  SETUP-RPi5.md  SETUP.md
scripts/: calibrate_optical.py  calibrate_soft_iron_hard_iron.py  crontab_check_estimator.sh
src/calibration/: CMakeLists.txt  package.xml
src/calibration/scripts/: dump_mag.py  imu_calibration.py
src/estimation/: CMakeLists.txt  package.xml
src/estimation/estimation_pkg/: ekf.py  estimator.py  estimator_complementary_dead_reckoning.py  estimator_complementary_dead_reckoning_detect_lift.py  estimator_complementary_filter.py  estimator_complementary_filter_detect_lift.py  estimator_imu_basic_ahrs_dead_reckoning.py  estimator_imu_dead_reckoning.py  estimator_optical.py  estimator_optical_imu_integrator.py  estimator_simple_ekf.py  simple_ekf.py  utils.py
src/estimation/msg/: Estimation.msg  Measurements.msg
src/estimation/scripts/: estimator_node.py  simple_estimation.py
src/estimation/srv/: SwitchEstimator.srv
src/main/: CMakeLists.txt  package.xml
src/main/launch/: local_launch.py  main_launch.py  no_sensors_launch.py
src/main/scripts/: recording_service_node.py
src/main/srv/: StartRecording.srv
src/optical_sensor/: CMakeLists.txt  package.xml
src/optical_sensor/scripts/: start_optical.py
src/server/: CMakeLists.txt  README.md  package.xml
src/server/launch/: server.launch.py
src/server/scripts/: inject_dummy_recordings.py  start_server.py  start_server_dash.py  start_server_dash_full.py
src/server/server_pkg/: server_api.py  server_db.py  server_ros.py  server_utils.py
src/server/web/static/css/: base.css  layout.css  recording.css
src/server/web/static/js/: main.js
src/server/web/templates/: index.html
